# bonus

./: README.md  app.py  hh_vacancies_data_python_developer_113.csv  index.html  main.py  pyproject.toml  requirements.txt  scraper.py
