[project]
name = "bonus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scrapy>=2.12.0",
    "selenium>=4.32.0",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
    "yake>=0.4.8",
]
